@@ -1,5 +1,8 @@
 This file documents the revision history for mod_gearman.
 
+next:
+          - reopen logfile after core rotation
+
 5.0.2 Sun Feb  5 19:05:17 CET 2023
           - fix crash when using multiple result worker in neb module
 
